--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "custom-burger",
   "version": "0.1.0",
+  "homepage": "https://turquoise.github.io/react-custom-burger",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -24,6 +25,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -44,6 +46,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
